compilateurDeca/src/test/deca/syntax/valid/sans_objet/if-without-else.deca

// Description:
//
// teste if sans else
// Historique:09/01/2026
{
    if (true) {
        print(1);
    }
}