compilateurDeca/src/test/deca/syntax/invalid/sans_objet/if_no_parenth.deca

//Description
//
//Teste un if sans parenthèses
// Historique:
//    cree le 08/01/2026
{
    if true{
        print(2);
    }
}